--- a/projects.html
+++ b/projects.html
@@ -190,7 +190,7 @@
             <h2 data-aos="fade-up">Scratch</h2>
             <img data-aos="fade-up" class="headerimg" src="headers/scratch.png" />
             <p data-aos="fade-up">
-                An old (not so good) scratch project made somewhere between 2017 and 19.
+                An old (not so good) scratch project made many years ago.
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="https://scratch.mit.edu/projects/416422550">Play It Now</a>
         </section>
