--- a/canvas/editor.html
+++ b/canvas/editor.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Canvas - Lightweight Site Editor</title>
+  <link rel="icon" type="image/x-icon" href="Images/fav.ico">
+    <meta name="theme-color" content="#ff2d2d" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
