--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -996,7 +996,7 @@
             height: 100%; /* Match button height */
             width: 0; /* Start at 0 width */
             background-color: #cccccc; /* Grey color for progress bar */
-            animation: progress-fill 10s ease-in-out forwards;
+            animation: progress-fill 10s ease-in forwards;
             z-index: 1; /* Place behind text but above button background */
         }
 
