--- a/mcacountdown/timer.html
+++ b/mcacountdown/timer.html
@@ -1666,7 +1666,12 @@
     }
 
     if (parameter('date')) {
-        document.querySelector(".datepicker").value = parameter('date') + 'T00:00';
+        if(parameter('date').includes('T') && parameter('date').includes(':') ){
+           document.querySelector(".datepicker").value = parameter('date'); 
+        }
+        else{
+            document.querySelector(".datepicker").value = parameter('date') + 'T00:00';
+        }
         var countDownDate = new Date(document.querySelector(".datepicker").value);
 
         document.getElementById("autopilotpopup").remove();
@@ -1982,7 +1987,7 @@
 
         var cdtitle = document.getElementById("countdowntitle").value;
 
-        var refresh = window.location.protocol + "//" + window.location.host + window.location.pathname + '?date=' + convert(countDownDate) + '?colorone=' + color1normalized + '?colortwo=' + color2normalized + '?colorthree=' + color3normalized + '?colorfour=' + color4normalized + '?typeface=' + css.style.getPropertyValue('--typeface') + '?atc=' + bgstring + '?title=' + cdtitle;
+        var refresh = window.location.protocol + "//" + window.location.host + window.location.pathname + '?date=' + document.querySelector(".datepicker").value + '?colorone=' + color1normalized + '?colortwo=' + color2normalized + '?colorthree=' + color3normalized + '?colorfour=' + color4normalized + '?typeface=' + css.style.getPropertyValue('--typeface') + '?atc=' + bgstring + '?title=' + cdtitle;
         window.history.pushState({ path: refresh }, '', refresh);
 
         document.getElementById("linkinput").value = refresh;
