--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -87,15 +87,8 @@
         <br />
         <br />
         <h2 class="textelement">
-            Title
+            Presets
         </h2>
-        <input onblur="setcountdowntitle('settings');" id="cdtitlesettings" class="input" placeholder="Pick a title" style="margin-bottom:75px;" />
-
-        <h2 class="textelement">
-            Date
-        </h2>
-
-        <input class="datepicker" type="datetime-local" onblur="SetCountDowngeneral();" />
         <div class="wrapper">
             <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
             <ul class="tabs-box" id="tabs-box">
@@ -111,6 +104,18 @@
             </ul>
             <div class="icon"><i id="right" class="fa-solid fa-angle-right"></i></div>
         </div>
+        <br/>
+        <br/>
+        <h2 class="textelement">
+            Title
+        </h2>
+        <input onblur="setcountdowntitle('settings');" id="cdtitlesettings" class="input" placeholder="Pick a title" style="margin-bottom:75px;" />
+
+        <h2 class="textelement">
+            Date
+        </h2>
+
+        <input class="datepicker" type="datetime-local" onblur="SetCountDowngeneral();" />
         <br />
         <br />
         <h2 class="textelement">
