--- a/mcacountdown/schedulesbetav0b02.html
+++ b/mcacountdown/schedulesbetav0b02.html
@@ -310,8 +310,8 @@
 
     <div class="backgroundframe" id="animatedbackground">
         <div class="backgroundframe-bg">
-            <img class="bg-color album-artwork" id="bg1" src="Backgrounds/enhancedbackground_12.png" />
-            <img class="bg-black album-artwork" id="bg2" src="Backgrounds/enhancedbackground_12.png" />
+            <img class="bg-color album-artwork" id="bg1" src="enhancedbackground_12.png" />
+            <img class="bg-black album-artwork" id="bg2" src="enhancedbackground_12.png" />
         </div>
     </div>
 
