--- a/mcacountdown/closedbeta_integratedschedule.html
+++ b/mcacountdown/closedbeta_integratedschedule.html
@@ -398,9 +398,9 @@
 
 
     <div id="autopilotpopup" style="margin:0; padding:0; position:absolute; top:80%; left:0px; width:100%; height:20%; border-top:solid 3px white; opacity:1; transition:0.5s opacity;">
-        <h1 style="position: absolute; top: 15%; left: 48.5%; paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414;">or</h1>
+        <h1 style="position: absolute; top: 15%; left: calc(50vw - 21px); paint-order: stroke fill; -webkit-text-stroke-width: 10px; -webkit-text-stroke-color: #141414;">or</h1>
         <div id="manualpilot" style="background-image:url(calendarbg.png); background-size:cover; width: 50%; float: left; height: 100%; ">
-            <h1 style="margin-left:30px;" id="gearpointer"><i style="margin-right:30px;" class="fa-solid fa-angle-down"></i><span style="padding-top:100px;">pick a date</span></h1>
+            <h1 style="margin-left:3.75%" id="gearpointer"><i style="margin-right:30px;" class="fa-solid fa-angle-down"></i><span style="padding-top:100px;">pick a date</span></h1>
         </div>
         <div id="autopilot" style="float: right; width: 50%; background: linear-gradient(to right, #141414, #01FE5E); height: 100%; outline: 3px white solid; ">
             <div id="autopilotinfo" style="margin-left: 60px;">
@@ -852,7 +852,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
-        top: 35%;
+        top: calc(40% - 43px);
         background: none !important;
         border: 1px solid rgba(255,255,255,0);
         padding: 13px 20px;
@@ -1795,7 +1795,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
             position: absolute; /* or absolute */
             left: 50%;
             transform: translateX(-50%);
-            top: 30%;
+            top: calc(40% - 43px);
             font-size: 20px;
             text-align: center;
             border:none !important;
@@ -2700,7 +2700,7 @@ border: 1px solid rgba(255, 0, 0, 0.64);
         var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
 
-        if(!parameter("schedule") != "null"){ //will only trigger when there is no schedule active. schedule titles are handled with the cdschedule code.
+        if(parameter("schedule") == "null"){ //will only trigger when there is no schedule active. schedule titles are handled with the cdschedule code.
             if (document.getElementById("countdowntitle").value != "") { //if the countdown has a title
                 if (days > 0) { //if it's over 0 days, we use the days text with the title since there is a title
                     document.title = document.getElementById("countdowntitle").value + " in " + days + " days | Countdown";
