--- a/mcacountdown/schedulesbetav0b01.html
+++ b/mcacountdown/schedulesbetav0b01.html
@@ -287,6 +287,7 @@
             }
 
             alert("As of September 3rd, 2024 this beta is deprecated. It has been replaced by beta v0b02. To ensure usage of the latest Countdown Schedule or equivalent beta you will be given a link to v0b02.");
+            const encoded = encodeSchedule();
             alert('https://michaeldors.com/mcacountdown/schedulesbetav0b02?schedule=' + encoded);
     
             function addOrUpdateEvent() {
