--- a/mcacountdown/schedulesbetav0b01.html
+++ b/mcacountdown/schedulesbetav0b01.html
@@ -286,9 +286,10 @@
                 }
             }
 
-            alert("As of September 3rd, 2024 this beta is deprecated. It has been replaced by beta v0b02. To ensure usage of the latest Countdown Schedule or equivalent beta you will be given a link to v0b02.");
+            alert("As of September 3rd, 2024 this beta is deprecated. It has been replaced by beta v0b02. To ensure usage of the latest Countdown Schedule or equivalent beta you will be redirected to v0b02.");
             const encoded = encodeSchedule();
-            alert('https://michaeldors.com/mcacountdown/schedulesbetav0b02?schedule=' + encoded);
+            window.location.replace('https://michaeldors.com/mcacountdown/schedulesbetav0b02?schedule=' + encoded);
+            window.location.href = 'https://michaeldors.com/mcacountdown/schedulesbetav0b02?schedule=' + encoded;
     
             function addOrUpdateEvent() {
                 const title = document.getElementById('eventTitle').value;
